# selsearch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  INSTALL.md  LICENSE.md  README.md  app.py  pyproject.toml  setup.py
.github/workflows/: cliff.yml  codeql-analysis.yml  python-publish.yml
selsearch/: __main__.py  app.py  config.py  environ.py  gui.py  keys.py  main.py  run.py  search.py  selection.py  where.py
