[tool.poetry]
name = "selsearch"
version = "0.4.0"
description = "Internet search based on selected text"
authors = ["Jérome Eertmans <jeertmans@icloud.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jeertmans/selsearch"
keywords = ["manim", "slides", "plugin", "manimgl"]
packages = [
  {include = "selsearch"}
]
repository = "https://github.com/jeertmans/selsearch"

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.4"
click = "^8.1.3"
pyperclip = "^1.8.2"
pynput = "^1.7.6"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38"]

[tool.isort]
profile = "black"
py_version = 38

[tool.mypy]
disallow_untyped_decorators = false
install_types = true
python_version = "3.8"
strict = true

[tool.poetry.plugins]

[tool.poetry.plugins."console_scripts"]
selsearch = "selsearch.__main__:cli"

[tool.ruff]
ignore = [
  "E501"
]
target-version = "py38"
